--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,71 @@
-* {
+body {
     margin: 0;
-    padding: 0;
+    font-family: roboto;
+    overflow-x: hidden;
 }
 
 #particles-js {
-    background: url(Mainbackground.png) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background: #121212;
+    height: 150vh;
+    width: 100vw;
+}
+
+.main-container {
+    position: absolute;
+}
+
+.topheader {
+    height: 30px;
+    width: 100vw;
+    background-color: #1e1e1e;
+    border-bottom: 1px solid #252527;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.announcements {
+    color: #e1e1e1;
+    padding-top: 2px;
+}
+
+.main-header {
+    height: 75px;
+    width: 100vw;
+    background-color: #1e1e1e;
+    border-bottom: 1px solid #252527;
+    margin-bottom: 25px;
+}
+
+.main-content {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.header-img {
+    margin-top: 4px;
+}
+
+.header-title {
+    color: #e1e1e1;
+    margin-left: 15px;
+}
+
+.header {
+    color: white;
 }
 
 
+.fluid button {
+    background-color: #FF4181;
+!important;
+    color: #e1e1e1;
+    width: 50%;
+    font-size: 99px;
+    border: none;
+}
+
+.pay-button:hover {
+    cursor: pointer;
+}
