--- a/css/main.css
+++ b/css/main.css
@@ -47,10 +47,8 @@ body {
     margin-top: -20px;
 }
 
-.header-title {
-    color: #e1e1e1;
-    margin-left: 1px;
-    text-align: center;
+.header-imgtext {
+    margin-top: 4px;
     padding-right: 44px;
 }
 
@@ -69,5 +67,22 @@ body {
 }
 
 .pay-button:hover {
+    cursor: pointer;
+}
+
+footer {
+    background-color: #1e1e1e;
+    width: 100%;
+    height: 75px;
+    border-top: #FF4181 1px solid;
+}
+
+.footer-copyright {
+    padding-top: 20px;
+    color: #e1e1e1;
+    text-align: center;
+}
+
+.discord {
     cursor: pointer;
 }
