--- a/css/main.css
+++ b/css/main.css
@@ -15,26 +15,40 @@ body {
 }
 
 .topheader {
-    height: 30px;
+    padding-top: 9px;
+    height: 50px;
     width: 100vw;
     background-color: #1e1e1e;
     border-bottom: 1px solid #252527;
+
+    margin-bottom: 25px;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    color: #e1e1e1;
+    padding-top: 5px;
+    padding-right: 20px;
+}
+
+.menu {
     display: flex;
-    justify-content: center;
-    align-content: center;
+    justify-content: space-evenly;
 }
 
 .announcements {
     color: #e1e1e1;
-    padding-top: 2px;
+    padding-top: 5px;
 }
 
 .main-header {
+    padding-top: 3px;
     height: 75px;
     width: 100vw;
     background-color: #1e1e1e;
     border-bottom: 1px solid #252527;
-    margin-bottom: 25px;
+
 }
 
 .main-content {
@@ -49,7 +63,7 @@ body {
 
 .header-imgtext {
     margin-top: 4px;
-    padding-right: 44px;
+
 }
 
 .header {
