--- a/css/accordion.css
+++ b/css/accordion.css
@@ -1,123 +1,59 @@
-.faq-section {
-	min-height: 100vh;
-	padding: 10vh 0 0;
-}
-
-.faq-title h2 {
-	position: relative;
-	margin-bottom: 45px;
-	display: inline-block;
-	font-weight: 600;
-	line-height: 1;
-	font-size: 45px;
-	color: #e1e1e1;
-}
-
-.faq-title h2::before {
-	content: "";
-	position: absolute;
-	left: 50%;
-	width: 60px;
-	height: 2px;
-	background: #FF4181;
-	bottom: -25px;
-	margin-left: -30px;
-
-}
-
-.faq-title p {
-	padding: 0 190px;
-	margin-bottom: 10px;
-
-}
-
-.faq {
-	background: #1e1e1e;
-	box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.06);
-	border-radius: 4px;
-	opacity: 90%;
-}
-
-.faq .card {
-	border: none;
-	background: none;
-	border-bottom: 1px dashed #CEE1F8;
-}
-
-.faq .card .card-header {
-	padding: 0px;
-	border: none;
-	background: none;
-	-webkit-transition: all 0.3s ease 0s;
-	-moz-transition: all 0.3s ease 0s;
-	-o-transition: all 0.3s ease 0s;
-	transition: all 0.3s ease 0s;
-}
-
-.faq .card .card-header:hover {
-	background: rgba(233, 30, 99, 0.1);
-	padding-left: 10px;
-}
-
-.faq .card .card-header .faq-title {
+.container {
+	max-width: 60%;
+	margin: 0 auto;
+	padding: 0px 0 20px;
 	width: 100%;
-	text-align: left;
-	padding: 0px;
-	padding-left: 30px;
-	padding-right: 30px;
-	font-weight: 400;
-	font-size: 15px;
-	letter-spacing: 1px;
+}
+
+.acc h3 {
+	font-size: 25px;
+	background-color: rgba(30,30,30,0.9);
 	color: #e1e1e1;
-	text-decoration: none !important;
-	-webkit-transition: all 0.3s ease 0s;
-	-moz-transition: all 0.3s ease 0s;
-	-o-transition: all 0.3s ease 0s;
-	transition: all 0.3s ease 0s;
+	padding: 15px;
+	margin: 0;
 	cursor: pointer;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	font-family: 'Oswald', sans-serif;
+	letter-spacing: 2px;
+	position: relative;
 }
 
-.faq .card .card-header .faq-title .badge {
-	display: inline-block;
-	width: 20px;
-	height: 20px;
-	line-height: 14px;
-	float: left;
-	-webkit-border-radius: 100px;
-	-moz-border-radius: 100px;
-	border-radius: 100px;
-	text-align: center;
-	background: #FF4181;
-	color: #fff;
-	font-size: 12px;
-	margin-right: 20px;
+.acc h3:after {
+	content: '\002B';
+	position: absolute;
+	right: 20px;
+	font-size: 40px;
+	top: 50%;
+	transform: translateY(-50%);
+	transition: .3s ease-in-out;
 }
 
-.faq .card .card-body {
-	padding: 30px;
-	padding-left: 35px;
-	padding-bottom: 16px;
-	font-weight: 400;
-	font-size: 16px;
+.acc.active h3:after {
+	content: '\2212';
+	transition: .3s ease-in-out;
+}
+
+.content {
+	background-color: #252527;
+	display: none;
 	color: #e1e1e1;
-	line-height: 28px;
-	letter-spacing: 1px;
-	border-top: 1px solid #F3F8FF;
+	font-size: 22px;
+	padding: 12px;
 }
 
-.faq .card .card-body p {
-	margin-bottom: 14px;
+.content-inner {
+	padding: 15px;
 }
 
-@media (max-width: 991px) {
-	.faq {
-		margin-bottom: 30px;
-	}
+.content * {
+	margin-top: 0;
+	line-height: 1.5;
+}
 
-	.faq .card .card-header .faq-title {
-		line-height: 26px;
-		margin-top: 10px;
-	}
+.acc {
+	border-bottom: 1px solid #e1e1e1;
+}
+.faq-title {
+	text-align: center;
+	color: #e1e1e1;
+	font-size: 40px;
 }
